--- a/action.yml
+++ b/action.yml
@@ -9,5 +9,5 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ inputs.who-to-greet }}.
+    - run: echo Hello ${{ inputs.who-to-greet }}. V2 version
       shell: bash
