--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,9 @@ jobs:
   upload_tool_cache:
     runs-on: ubuntu-latest
     steps:
-      # - name: Install GH CLI
-      #   uses: dev-hanz-ops/install-gh-cli-action@v0.1.0
-      #   with:
-      #     gh-cli-version: 2.32.0
-      - run: export GH_TOKEN=${{ secrets.GH_TOKEN }}
-      - run: gh repo list bryanaexp
-        env:
-          GH_TOKEN: ${{secrets.GH_TOKEN}}
+      - name: Set up java
+        uses: actions/setup-java@main
+        with:
+          java-version: 8
+          distribution: 'adopt'
 
