--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,12 @@
-name: GH CLI
+name: Transitive Testing
 
 on: push
 jobs:
-  upload_tool_cache:
+  wow:
     runs-on: ubuntu-latest
     steps:
       - name: Set up java
-        uses: actions/setup-java@main
+        uses: bryanaexp/Hello-World@main
         with:
-          java-version: 8
-          distribution: 'adopt'
+          who-to-greet: 'edward'
 
