--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ inputs.who-to-greet }} Layer 1
+    - name: Set Greeting
+      run: echo "Hello ."
+      shell: bash
     # - name: Invoke Layer 2
     #   uses: bryanaexp/ga-layer-2
 
