--- a/action.yml
+++ b/action.yml
@@ -13,5 +13,5 @@ runs:
       run: echo "Hello ."
       shell: bash
     - name: Invoke Layer 2
-      uses: bryanaexp/ga-layer-2
+      uses: bryanaexp/ga-layer-2@main
 
