--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,5 @@ runs:
   using: "composite"
   steps:
     - name: Set Greeting
-      run: echo "Hello ."
+      run: echo "PUBLIC ACTION LOG"
       shell: bash
-    - name: Invoke Layer 2
-      uses: bryanaexp/ga-layer-2@main
